- Fixed bug where all new blogs created using the BuddyPress "Create Blog" form would be set to private - Fixed spacing with user avatars - Added "Send Message" button to user profiles. - Added "Edit Profile" button at the bottom of logged in user's profile fields, to remind new users that they can add more information.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@633 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-core/css/directory-members.css
+++ b/bp-core/css/directory-members.css
@@ -134,7 +134,6 @@ ul#members-list li {
 	color: #777;
 	font-size: 11px;
 	padding: 0 33px 0 11px;
-	margin-right: -7px;
 	text-shadow: 0 1px 0 #fff;
 	text-decoration: none;
 }
